<resources>

    <string name="viapoint">Via-Point</string>

    <string name="app_name">Trip Maester</string>
    <string name="desc_list_item_icon">Item Icon</string>


    <!-- begin menu map items -->
    <string-array name="map_menu_items">
        <item>Transportation</item>
        <item>Routing algorithm</item>
        <item>Voice</item>
        <item>Navigate</item>
        <item>Show traffic info</item>
        <item>Show warning info</item>
    </string-array>

    <string-array name="map_algorithm_menu_items">
        <item>Shortest Path</item>
        <item>Real-time Fastest Path</item>
        <item>Multiple Point Path</item>
        <item>Profile Fastest Path</item>
    </string-array>

    <string-array name="map_vehicle_menu_items">
        <item>Car</item>
        <item>Motobike</item>
        <item>Bus</item>
        <item>Truck</item>
    </string-array>

    <string name="map_menu_item_void">Voice</string>
    <string name="map_menu_item_navigate">Navigate</string>
    <string name="map_menu_item_traffic_info">Traffic infor</string>
    <string name="map_menu_item_warning">Warning infor</string>

    <!-- end menu map items -->
    <string-array name="trip_menu_items">
        <item>New</item>
        <item>Edit</item>
        <item>Share</item>
        <item>Invite</item>
    </string-array>


    <!--  menu of friend items -->
    <string-array name="friend_menu_items">
        <item>Friends</item>
        <item>Invite</item>
        <item>Share</item>
        <item>Other</item>
    </string-array>

    <!--  menu of message items-->
    <string-array name="msg_menu_items">
        <item>Tạo tin nhắn</item>
        <item>Xem tin nhắn</item>
    </string-array>


    <string-array name="map_pop_items">
        <item>Broken light</item>
        <item>Accident</item>
        <item>Construction</item>
        <item>Be careful</item>
        <item>Flood</item>
        <item>Polices</item>
    </string-array>

    <string name="trip_privacy_prompt">Your trip\'s privacy</string>

    <string-array name="trip_privacy_arrays">
        <item>Private</item>
        <item>Friends</item>
        <item>Public</item>
    </string-array>

    <string name="login_prompt_select_account">Please Select Account</string>
    <string name="login_prompt_user_fb_icon">Facebook icon</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="icon_menu_item">icon menu item</string>
    <string name="account_facebook">Facebook</string>
    <string name="account_google">Google</string>
    <string name="button_bar_trip_current_share">Share</string>
    <string name="button_bar_trip_current_comment">Comment</string>
    <string name="com_facebook_like_button_liked">Like</string>
    <string name="enter_name_trip">Enter trip name</string>
    <string name="information_text">Routing...</string>
    <string name="warning_title">Warning...</string>
    <string name="facebook_app_id">1845476589027840</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter description</string>
    <string name="new_trip_title">Create new trip</string>
    <string name="start_trip_date">Start date</string>
    <string name="finish_trip_date">Finish date</string>
    <string name="btn_okie_caption">Okie</string>
    <string name="btn_cancel_caption">Cancel</string>
    <string name="title_friend_msg">Message</string>
    <string name="msg_default">I would like you install Follow Trip application</string>
    <string name="msg_invited">Invited</string>
    <string name="msg_invite_install">Invite install</string>
    <string name="edit_trip_title">List trip</string>

    <string name="turn_left">Turn left</string>
    <string name="turn_right">Turn right</string>
    <string name="go_straight_ahead">Go straight ahead</string>
    <string name="sharing_infor_success">Successful</string>
    <string name="sharing_infor_fail">Failed</string>
    <string name="loading">Loading</string>
    <string name="wait">Please wait &#8230;</string>
    <string name="tp_hcm">Tp HCM</string>
    <string name="tp_hochiminh">Thành phố Hồ Chí Minh</string>
    <string name="hcm">Hồ Chí Minh</string>
    <string name="tphcm">Tp HCM</string>
    <string name="arrive">You have arrived at</string>
    <string name="warning">Warning options</string>
    <string name="search_location_not_found">Location not found</string>
    <string name="via">Via</string>
    <string name="search_result">Search result</string>
    <string name="destination_not_found">Destination not found</string>
    <string name="starting_point_not_found">Starting point not found</string>
    <string name="hem">Hẻm</string>
    <string name="path_not_found">Path not found</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="vong_xoay">Vòng xoay</string>
    <string name="bung_binh">Bùng binh</string>
    <string name="nga">Ngã</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="phai">phải</string>
    <string name="trai">trái</string>
    <string name="traffic_info_timeout">Traffic info request: Timeout</string>
    <string name="warning_info_timeout">Warning info request: Timeout</string>

    <string name="it_brokenlight">Broken light</string>
    <string name="it_accident">Accident</string>
    <string name="it_construc">Construction</string>
    <string name="it_care">Be careful</string>
    <string name="it_flood">Flood</string>
    <string name="it_police">Polices</string>

    <string name="location_not_found">Location not found, make sure GPS is enabled</string>
    <string name="search">Search</string>
    <string name="detail">Detail</string>
    <string name="route_info">Route info</string>
    <string name="route_not_found">Route not found</string>
    <string name="shortest">Shortest Path</string>
    <string name="static_shortest">Static Fastest Path</string>
    <string name="profile_shortest">Profile Fastest Path</string>
    <string name="realtime_shortest">Real-time Fastest Path</string>
    <string name="multi_point_path">Multiple Point Path</string>
    <string name="gps_dialog_title">Turn on GPS</string>
    <string name="gps_dialog_content">GPS helps this app determine location more precisely.</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <string name="btn_invite">Invite More Friends</string>
    <string name="alert_dialog_share">Share</string>
    <string name="alert_dialog_comment">Comment</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_close">Close</string>
    <string name="lbl_AppFriends">Follow Trip\'s Friends</string>
    <string name="btn_capture">Capture</string>
    <string name="btn_dialog_ok">Ok</string>
    <string name="btn_dialog_cancel">Cancel</string>
    <string name="hint_comment">Comment here...</string>
    <string name="btn_start">Start</string>
    <string name="btn_end">End</string>
    <string name="btn_comment">Comment</string>
    <string name="enter_start_place">Start place : </string>
    <string name="enter_end_place">End place : </string>
    <string name="trip_privacy">Trip\'s privacy</string>
    <string name="lbl_UserBirthday">Birthday : </string>
    <string name="lbl_user_gender">Gender : </string>
    <string name="lbl_user_email">Email : </string>
    <string name="titleShareDialog">Share To Your Friends</string>

    <!--  KenK11 -->
    <string name="login_wait_msg">Loading. Please wait...</string>
    <string name="technical_issue_routing">Technical issue when getting the route</string>
    <string name="no_route">No possible route here</string>
    <string name="road">Road</string>
    <string name="login_first_title">Login Before Start</string>
    <string name="login_first_prompt">You need to login before start a trip!</string>
    <string name="default_like">0 like</string>
    <string name="default_comment">0 comment</string>
    <string name="itinerary_maker">Itinerary makers</string>
    <string name="route_step">Route step</string>
    <string name="take_photo_title">Notification</string>
    <string name="take_photo_prompt">Would you like to continue capturing?</string>
    <string name="take_video_fail">Video Capture Failed</string>
    <string name="take_photo_fail">Image Capture Failed</string>
    <string name="error_loading_road_status">Error when loading the road - status =</string>
    <string name="view_on_map">View On Map</string>


    <!-- <string name="ic_brokenlight">@drawable/broken_light</string>
    <string name="ic_accident">@drawable/accident</string>
    <string name="ic_construc">@drawable/construction</string>
    <string name="ic_flood">@drawable/flood</string>
    <string name="ic_care">@drawable/warning</string>
    <string name="ic_police">@drawable/police</string>
     -->
</resources>
